--- a/index.html
+++ b/index.html
@@ -2,15 +2,24 @@
 <html lang="en">
 
 <head>
+        <!-- Required meta tags always come first -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+    
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link href="css/styles.css" rel="stylesheet">
     <title>Ristorante Con Fusion</title>
 </head>
 
 <body>
 
-    <header>
-        <div>
-            <div>
-                <div>
+        <header class="jumbotron"> 
+            <div class="container">
+                    <div class="col-12 col-sm-6">
+                            <div class="col-12 col-sm">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
                 </div>
@@ -21,8 +30,8 @@
     </header>
 
     <div>
-        <div>
-            <div>
+            <div class="col-12 col-sm-4 col-md-3">
+                    <div class="col col-sm col-md">
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
             <div>
@@ -32,8 +41,8 @@
         </div>
 
 
-        <div>
-            <div>
+                <div class="col-12 col-sm-4 col-md-3">
+                        <div class="col col-sm col-md">
                 <h3>This Month's Promotions</h3>
             </div>
             <div>
@@ -42,8 +51,8 @@
             </div>
         </div>
 
-        <div>
-            <div>
+                <div class="col-12 col-sm-4 col-md-3">
+                        <div class="col col-sm col-md">
                 <h3>Meet our Culinary Specialists</h3>
             </div>
             <div>
@@ -54,19 +63,19 @@
         </div>
     </div>
 
-    <footer>
-        <div>
-            <div>             
-                <div>
+    <footer class="footer"> 
+        <div class="container">
+            <div class="row">             
+                    <div class="col-4 col-sm-2">
                     <h5>Links</h5>
-                    <ul>
+                    <ul class="list-unstyled">
                         <li><a href="#">Home</a></li>
                         <li><a href="#">About</a></li>
                         <li><a href="#">Menu</a></li>
                         <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
-                <div>
+                <div class="col-7 col-sm-5"> 
                     <h5>Our Address</h5>
                     <address>
 		              121, Clear Water Bay Road<br>
@@ -77,8 +86,9 @@
 		              Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
 		           </address>
                 </div>
-                <div>
-                    <div>
+                <div></div>
+                <div class="col-12 col-sm-4"> 
+                    
                         <a href="http://google.com/+">Google+</a>
                         <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
                         <a href="http://www.linkedin.com/in/">LinkedIn</a>
@@ -89,13 +99,16 @@
                 </div>
            </div>
            <div>             
-                <div>
+                <div class="col-auto">
                     <p>© Copyright 2018 Ristorante Con Fusion</p>
                 </div>
            </div>
         </div>
     </footer>
-
+    <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
+    <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
+    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
+    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
 </body>
 
 </html>
