--- a/index.html
+++ b/index.html
@@ -10,18 +10,19 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <link href="css/styles.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet">
     <title>Ristorante Con Fusion</title>
 </head>
 
 <body>
 
         <header class="jumbotron"> 
-            <div class="container">
+            <div class="row row-header"></div>
                     <div class="col-12 col-sm-6">
                             <div class="col-12 col-sm">
                     <h1>Ristorante con Fusion</h1>
                     <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
+                    <div><a href="aboutus.html">About Us</a></div>
                 </div>
                 <div>
                 </div>
@@ -29,7 +30,7 @@
         </div>
     </header>
 
-    <div>
+    <div class="row row-content align-items-center">
             <div class="col-12 col-sm-4 col-md-3">
                     <div class="col col-sm col-md">
                 <h3>Our Lipsmacking Culinary Creations</h3>
@@ -86,9 +87,8 @@
 		              Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
 		           </address>
                 </div>
-                <div></div>
-                <div class="col-12 col-sm-4"> 
-                    
+                <div class="text-center">
+                <div class="col-12 col-sm-4 align-self-center">
                         <a href="http://google.com/+">Google+</a>
                         <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
                         <a href="http://www.linkedin.com/in/">LinkedIn</a>
@@ -99,7 +99,7 @@
                 </div>
            </div>
            <div>             
-                <div class="col-auto">
+                <div class="row justify-content-center">   
                     <p>© Copyright 2018 Ristorante Con Fusion</p>
                 </div>
            </div>
