--- a/aboutus.html
+++ b/aboutus.html
@@ -28,7 +28,7 @@
                             <li class="nav-item active"><a class="nav-link" href="./index.html">Home</a></li>
                             <li class="nav-item"><a class="nav-link" href="./aboutus.html">About</a></li>
                             <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
-                            <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                            <li class="nav-item"><a class="nav-link" href="./contactus.html">Contact</a></li>
                         </ul>            
                         </div>
                 </div>
