--- a/aboutus.html
+++ b/aboutus.html
@@ -22,7 +22,7 @@
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
-                            <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
+                            <a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="30" width="41"></a>       
                         <div class="collapse navbar-collapse" id="Navbar">
                         <ul class="navbar-nav mr-auto">
                             <li class="nav-item active"><a class="nav-link" href="./index.html">Home</a></li>
@@ -34,7 +34,9 @@
                 </div>
             </nav>
     <header class="jumbotron"> 
-        <div class="container">
+            <div class="col-12 col-sm align-self-center">
+                    <img src="img/logo.png" class="img-fluid">
+                </div>
         <div class="row row-header"></div>
                 <div class="col-12 col-xs-6">
                     <h1>Ristorante con Fusion</h1>
