--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                                 <span class="navbar-toggler-icon"></span>
                             </button>
-                            <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
+                            <a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="30" width="41"></a> 
                         <div class="collapse navbar-collapse" id="Navbar">
                         <ul class="navbar-nav mr-auto">
                                 <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-home fa-lg"></span> Home</a></li>
@@ -34,7 +34,9 @@
                 </div>
             </nav>
         <header class="jumbotron"> 
-            <div class="row row-header"></div>
+                <div class="col-12 col-sm align-self-center">
+                        <img src="img/logo.png" class="img-fluid">
+                    </div>
                     <div class="col-12 col-sm-6">
                             <div class="col-12 col-sm">
                     <h1>Ristorante con Fusion</h1>
@@ -43,7 +45,21 @@
                 <div>
                 </div>
             </div>
-        </div>
+        </div>                <div class="media">
+                <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="Uthappizza">
+                <div class="media-body">
+                        <div class="media">
+                                <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="Uthappizza">
+                                <div class="media-body">
+                                    <h2 class="mt-0">Uthappizza</h2>
+                                    <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
+                                        Italian pizza, topped with Cerignola olives, ripe vine
+                                        cherry tomatoes, Vidalia onion, Guntur chillies and
+                                        Buffalo Paneer.</p>
+                                </div>
+                            </div>
+                </div>
+            </div>
     </header>
 
     <div class="row row-content align-items-center">
@@ -73,9 +89,18 @@
                 <h3>Meet our Culinary Specialists</h3>
             </div>
             <div>
-                <h2>Alberto Somayya</h2>
-                <h4>Executive Chef</h4>
-                <p>Award winning three-star Michelin chef with wide International experience having worked closely with whos-who in the culinary world, he specializes in creating mouthwatering Indo-Italian fusion experiences. </p>
+                    <div class="media">
+                            <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/alberto.png" alt="Alberto Somayya">
+                            <div class="media-body">
+                                <h2 class="mt-0">Alberto Somayya</h2>
+                                <h4>Executive Chef</h4>
+                                <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide
+                                    International experience having worked closely with
+                                    whos-who in the culinary world, he specializes in
+                                    creating mouthwatering Indo-Italian fusion experiences.
+                                    </p>
+                            </div>
+                        </div>
             </div>
         </div>
     </div>
