--- a/index.html
+++ b/index.html
@@ -34,61 +34,68 @@
                 </div>
             </nav>
         <header class="jumbotron"> 
-                <div class="col-12 col-sm align-self-center">
-                        <img src="img/logo.png" class="img-fluid">
-                    </div>
+            <div class="container">
+                <div class="row">
                     <div class="col-12 col-sm-6">
-                            <div class="col-12 col-sm">
-                    <h1>Ristorante con Fusion</h1>
-                    <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
+                        <h1>Ristorante con Fusion</h1>
+                        <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
+                    </div>
+                        <div class="col-12 col-sm-3 align-self-center">
+                                <img src="img/logo.png" class="img-fluid">
+                        </div>
                 </div>
                 <div>
                 </div>
             </div>
-        </div>                <div class="media">
-                <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="Uthappizza">
-                <div class="media-body">
-                        <div class="media">
-                                <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="Uthappizza">
-                                <div class="media-body">
-                                    <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
-                                    <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
-                                        Italian pizza, topped with Cerignola olives, ripe vine
-                                        cherry tomatoes, Vidalia onion, Guntur chillies and
-                                        Buffalo Paneer.</p>
-                                </div>
-                            </div>
-                </div>
-            </div>
+        </div>
+        </div>
     </header>
-
-    <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-4 col-md-3">
-                    <div class="col col-sm col-md">
+    
+    <div class="container">
+        <div class="row row-content align-items-center">
+            <div class="col-12 order-1 col-sm-4 order-sm-2">
                 <h3>Our Lipsmacking Culinary Creations</h3>
             </div>
-            <div>
-                <h2>Uthappizza</h2>
-                <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
+            <div class="col-12 order-2 col-sm-8 order-sm-1">
+                <div class="media-body">
+                    <div class="media">
+                        <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="Uthappizza">
+                        <div class="media-body">
+                                <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$4.99</span></h2>
+                                <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
+                                                        Italian pizza, topped with Cerignola olives, ripe vine
+                                                        cherry tomatoes, Vidalia onion, Guntur chillies and
+                                                        Buffalo Paneer.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-
-
-                <div class="col-12 col-sm-4 col-md-3">
-                        <div class="col col-sm col-md">
+        <div class="row row-content align-items-center">
+            <div class="col-12 col-sm-3">
                 <h3>This Month's Promotions</h3>
             </div>
-            <div>
-                <h2>Weekend Grand Buffet</h2>
-                <p>Featuring mouthwatering combinations with a choice of five different salads, six enticing appetizers, six main entrees and five choicest desserts. Free flowing bubbly and soft drinks. All for just $19.99 per person </p>
+            <div class="col-12 col-sm-9">
+                <div class="media-body">
+                        <div class="media">
+                            <div class="media-body">
+                                <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                                <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five different salads, 
+                                    six enticing appetizers, six main entrees and five choicest desserts. 
+                                    Free flowing bubbly and soft drinks. 
+                                    All for just $19.99 per person </p>
+                            </div>
+                            <img class="d-flex mr-3 img-thumbnail align-right" src="img/buffet.png" alt="Buffet">
+                        </div>
+                    </div>           
+                </div>
             </div>
-        </div>
-
-                <div class="col-12 col-sm-4 col-md-3">
-                        <div class="col col-sm col-md">
+       
+        <div class="row row-content">
+            <div class="col-12 order-1 col-sm-3 order-sm-2">
                 <h3>Meet our Culinary Specialists</h3>
             </div>
-            <div>
+            <div class="col-12 order-2 col-sm-9 order-sm-1">
                     <div class="media">
                             <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/alberto.png" alt="Alberto Somayya">
                             <div class="media-body">
@@ -101,10 +108,10 @@
                                     </p>
                             </div>
                         </div>
-            </div>
+                </div>
+          </div>
         </div>
     </div>
-
     <footer class="footer"> 
         <div class="container">
             <div class="row">             
@@ -129,7 +136,6 @@
                       <a href="mailto:confusion@food.net">confusion@food.net</a>
 		           </address>
                 </div>
-                <div class="text-center">
                 <div class="col-12 col-sm-4 align-self-center">
                         <div class="text-center">
                                 <a class="btn btn-social-icon btn-google" href="http://google.com/+"><i class="fa fa-google-plus"></i></a>
