--- a/index.html
+++ b/index.html
@@ -37,9 +37,52 @@
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span
                                 class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
+                <span class="navbar-text">
+                    <a data-toggle="modal" data-target="#loginModal">
+                        <span class="fa fa-sign-in"></span> Login</a>
+                </span>
             </div>
         </div>
     </nav>
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Login </h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-row">
+                            <div class="form-group col-sm-4">
+                                <label class="sr-only" for="exampleInputEmail3">Email address</label>
+                                <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3"
+                                    placeholder="Enter email">
+                            </div>
+                            <div class="form-group col-sm-4">
+                                <label class="sr-only" for="exampleInputPassword3">Password</label>
+                                <input type="password" class="form-control form-control-sm mr-1"
+                                    id="exampleInputPassword3" placeholder="Password">
+                            </div>
+                            <div class="col-sm-auto">
+                                <div class="form-check">
+                                    <input class="form-check-input" type="checkbox">
+                                    <label class="form-check-label"> Remember me
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <button type="button" class="btn btn-secondary btn-sm ml-auto"
+                                data-dismiss="modal">Cancel</button>
+                            <button type="submit" class="btn btn-primary btn-sm ml-1">Sign in</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
     <header class="jumbotron">
         <div class="container">
             <div class="row">
@@ -55,7 +98,9 @@
                     <!--
                     <button type="button" class="btn btn-warning" data-toggle="button" aria-pressed="false"
                         autocomplete="off" id="reservation">Reserve Table</button> -->
-                    <a href="#reservation-card" class="btn btn-warning">Reserve Table</a>
+                    <a role="button" href="#reservation-card" class="btn btn-block nav-link btn-warning"
+                        data-toggle="tooltip" data-html="true" title="Or Call us at  <br><strong>+852 12345678</strong>"
+                        data-placement="bottom" href="#reserveform">Reserve Table</a>
                 </div>
             </div>
             <div>
@@ -66,148 +111,93 @@
     </header>
 
     <div class="container">
-        <div class="row row-content align-items-center">
-            <div class="col-12 order-1 col-sm-4 order-sm-2">
-                <h3>Our Lipsmacking Culinary Creations</h3>
-            </div>
-            <div class="col-12 order-2 col-sm-8 order-sm-1">
-                <div class="media-body">
-                    <div class="media">
-                        <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png"
-                            alt="Uthappizza">
-                        <div class="media-body">
-                            <h2 class="mt-0">Uthappizza <span class="badge badge-danger">HOT</span> <span
-                                    class="badge badge-pill badge-secondary">$4.99</span></h2>
-                            <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
-                                Italian pizza, topped with Cerignola olives, ripe vine
-                                cherry tomatoes, Vidalia onion, Guntur chillies and
-                                Buffalo Paneer.</p>
+        <div class="row row-content">
+            <div class="col">
+                <div id="mycarousel" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner" role="listbox">
+                        <div class="carousel-item active">
+                            <img class="d-block img-fluid" src="img/uthappizza.png" alt="Uthappizza">
+                            <div class="carousel-caption d-none d-md-block">
+                                <h2>Uthappizza <span class="badge badge-danger">HOT</span> <span
+                                        class="badge badge-pill badge-default">$4.99</span></h2>
+                                <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
+                                    Italian pizza, topped with Cerignola olives, ripe vine
+                                    cherry tomatoes, Vidalia onion, Guntur chillies and
+                                    Buffalo Paneer.</p>
+                            </div>
                         </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row row-content align-items-center">
-            <div class="col-12 col-sm-3">
-                <h3>This Month's Promotions</h3>
-            </div>
-            <div class="col-12 col-sm-9">
-                <div class="media-body">
-                    <div class="media">
-                        <div class="media-body">
+                        <div class="carousel-item">
                             <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
                             <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five
                                 different salads,
                                 six enticing appetizers, six main entrees and five choicest desserts.
                                 Free flowing bubbly and soft drinks.
                                 All for just $19.99 per person </p>
+
                         </div>
-                        <img class="d-flex mr-3 img-thumbnail align-right" src="img/buffet.png" alt="Buffet">
+                        <div class="carousel-item">
+                            <div class="media">
+                                <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/alberto.png"
+                                    alt="Alberto Somayya">
+                                <div class="media-body">
+                                    <h2 class="mt-0">Alberto Somayya</h2>
+                                    <h4>Executive Chef</h4>
+                                    <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide
+                                        International experience having worked closely with
+                                        whos-who in the culinary world, he specializes in
+                                        creating mouthwatering Indo-Italian fusion experiences.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <ol class="carousel-indicators">
+                        <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
+                        <li data-target="#mycarousel" data-slide-to="1"></li>
+                        <li data-target="#mycarousel" data-slide-to="2"></li>
+                    </ol>
+                    <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon"></span>
+                        </a>
+                        <a class="carousel-control-next" href="#mycarousel" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon"></span>
+                        </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="form group row">
+            <label for="dateAndTime" class="col-12 col-sm-2 col-form-label">Date and
+                Time</label>
+
+            <div class="col-12 col-sm-5">
+                <div class="input-group">
+
+                    <input type="text" class="form-control" placeholder="Date" aria-describedby="dateAndTime">
+                    <div class="input-group-append">
+                        <span class="input-group-text" id="dateAndTime"><i class="fa fa-calendar-o"></i></span>
+
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-5">
+                <div class="input-group">
+
+                    <input type="text" class="form-control" placeholder="Time" aria-describedby="dateAndTime">
+                    <div class="input-group-append">
+                        <span class="input-group-text" id="dateAndTime"><i class="fa fa-clock-o"></i></span>
+
                     </div>
                 </div>
             </div>
         </div>
-
-        <div class="row row-content">
-            <div class="col-12 order-1 col-sm-3 order-sm-2">
-                <h3>Meet our Culinary Specialists</h3>
-            </div>
-            <div class="col-12 order-2 col-sm-9 order-sm-1">
-                <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/alberto.png"
-                        alt="Alberto Somayya">
-                    <div class="media-body">
-                        <h2 class="mt-0">Alberto Somayya</h2>
-                        <h4>Executive Chef</h4>
-                        <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide
-                            International experience having worked closely with
-                            whos-who in the culinary world, he specializes in
-                            creating mouthwatering Indo-Italian fusion experiences.
-                        </p>
-                    </div>
-                </div>
-            </div>
+        <div class="form group row">
+            <button type="submit" class="btn btn-primary m-3">Reserve</button>
         </div>
-        <div class="row row-content align-items-center">
-            <div class="card col-12 col-sm-8">
-                <div class="card-body" id="reservation-card">
-                    <h5 class="card-title bg-warning p-3 text-white">Reserve a Table</h5>
-                    <p class="card-text">
-                        <form>
-                            <div class="form group row">
-                                <label for="numberOfGuests" class="col-12 col-sm-2 col-form-label">Number of
-                                    Guests</label>
-                                <div class="col-sm-10">
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="numberOfGuests"
-                                            id="numberOfGuests" value="1">
-                                        <label class="form-check-label" for="inlineRadio1">1</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="numberOfGuests"
-                                            id="numberOfGuests" value="2">
-                                        <label class="form-check-label" for="numberOfGuests">2</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="numberOfGuests"
-                                            id="numberOfGuests" value="3">
-                                        <label class="form-check-label" for="numberOfGuests">3</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="numberOfGuests"
-                                            id="numberOfGuests" value="4">
-                                        <label class="form-check-label" for="numberOfGuests">4</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="numberOfGuests"
-                                            id="numberOfGuests" value="5">
-                                        <label class="form-check-label" for="numberOfGuests">5</label>
-                                    </div>
-                                    <div class="form-check form-check-inline">
-                                        <input class="form-check-input" type="radio" name="numberOfGuests"
-                                            id="numberOfGuests" value="6">
-                                        <label class="form-check-label" for="numberOfGuests">6</label>
-                                    </div>
-
-                                </div>
-                            </div>
-
-                            <div class="form group row">
-                                <label for="dateAndTime" class="col-12 col-sm-2 col-form-label">Date and
-                                    Time</label>
-
-                                <div class="col-12 col-sm-5">
-                                    <div class="input-group">
-
-                                        <input type="text" class="form-control" placeholder="Date"
-                                            aria-describedby="dateAndTime">
-                                        <div class="input-group-append">
-                                            <span class="input-group-text" id="dateAndTime"><i
-                                                    class="fa fa-calendar-o"></i></span>
-
-                                        </div>
-                                    </div>
-                                </div>
-                                <div class="col-12 col-sm-5">
-                                    <div class="input-group">
-
-                                        <input type="text" class="form-control" placeholder="Time"
-                                            aria-describedby="dateAndTime">
-                                        <div class="input-group-append">
-                                            <span class="input-group-text" id="dateAndTime"><i
-                                                    class="fa fa-clock-o"></i></span>
-
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="form group row">
-                                <button type="submit" class="btn btn-primary m-3">Reserve</button>
-                            </div>
-                        </form>
-                </div>
-            </div>
-        </div>
+        </form>
+    </div>
+    </div>
+    </div>
     </div>
     <footer class="footer">
         <div class="container">
@@ -266,6 +256,8 @@
             $("#reservation").click(function () {
                 $("html,body").scrollTop($("#reservation-card").offset().top);
             });
+
+            $('[data-toggle="tooltip"]').tooltip();
         }
     </script>
 </body>
