--- a/index-week2.html
+++ b/index-week2.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link href="css/navbar-fixed-side.css" rel="stylesheet" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="css/style3.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     <title>Ristorante Con Fusion</title>
@@ -22,7 +22,7 @@
 
 <body>
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
-        <div class="container">
+        <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -38,7 +38,6 @@
                     <li class="nav-item"><a class="nav-link" href="./contactus.html"><span
                                 class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
-
             </div>
         </div>
     </nav>
@@ -54,11 +53,17 @@
                     <img src="img/logo.png" class="img-fluid">
                 </div>
                 <div class="col-12 col-sm-3">
-                    <a role="button" href="#reservation-card" class="btn btn-block nav-link btn-warning"
-                        data-toggle="tooltip" data-html="true" title="Or Call us at  <br><strong>+852 12345678</strong>"
-                        data-placement="bottom" href="#reserveform">Reserve Table</a>
+                    <!--
+                    <button type="button" class="btn btn-warning" data-toggle="button" aria-pressed="false"
+                        autocomplete="off" id="reservation">Reserve Table</button> -->
+                    <a href="#reservation-card" class="btn btn-warning">Reserve Table</a>
                 </div>
             </div>
+            <div>
+            </div>
+        </div>
+        </div>
+        </div>
     </header>
 
     <div class="container">
