--- a/index.html
+++ b/index.html
@@ -127,19 +127,22 @@
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
-                            <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five
-                                different salads,
-                                six enticing appetizers, six main entrees and five choicest desserts.
-                                Free flowing bubbly and soft drinks.
-                                All for just $19.99 per person </p>
+                            <div class="carousel-caption">
+
+                                <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span></h2>
+                                <p class="d-none d-sm-block">Featuring mouthwatering combinations with a choice of five
+                                    different salads,
+                                    six enticing appetizers, six main entrees and five choicest desserts.
+                                    Free flowing bubbly and soft drinks.
+                                    All for just $19.99 per person </p>
+                            </div>
 
                         </div>
                         <div class="carousel-item">
                             <div class="media">
                                 <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/alberto.png"
                                     alt="Alberto Somayya">
-                                <div class="media-body">
+                                <div class="carousel-caption d-none d-md-block">
                                     <h2 class="mt-0">Alberto Somayya</h2>
                                     <h4>Executive Chef</h4>
                                     <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide
